<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.solutions.tangent.tangentsolutions.activities.LoginActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_username"
        android:inputType="text"
        android:background="@drawable/post_card"
        android:padding="10dp"
        android:textSize="@dimen/size_medium"
        android:layout_marginBottom="@dimen/fab_margin"
        android:maxLines="1" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:background="@drawable/post_card"
        android:padding="10dp"
        android:textSize="@dimen/size_medium"
        android:maxLines="1" />

    <Button
        android:id="@+id/signIn"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/action_sign_in"
        android:textColor="@color/white"
        android:background="@drawable/blue_button"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:visibility="visible"/>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</LinearLayout>
